# TAFFO-submodule-vra

./: CMakeLists.txt
TaffoVRA/: CMakeLists.txt  CodeInterpreter.cpp  CodeInterpreter.hpp  CodeScheduler.cpp  CodeScheduler.hpp  IndirectCallWhitelist.cpp  IndirectCallWhitelist.hpp  MemSSAUtils.cpp  Range.hpp  RangeNode.hpp  RangeOperations.cpp  RangeOperations.hpp  RangeOperationsCallWhitelist.cpp  RangeOperationsCallWhitelist.hpp  TopologicalBBSort.hpp  VRAFunctionStore.cpp  VRAFunctionStore.hpp  VRAGlobalStore.cpp  VRAGlobalStore.hpp  VRALogger.hpp  VRAStore.cpp  VRAStore.hpp  VRAnalyzer.cpp  VRAnalyzer.hpp  ValueRangeAnalysis.cpp  ValueRangeAnalysis.hpp  ValueRangeAnalyzer.cpp  ValueRangeAnalyzer.hpp
